--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@
 name: CI
 
 env:
-  SCRIPTS_FOLDER: scripts
+  WORKSPACE_FOLDER: ${{ github.workspace }}
 
 on:
   push:
@@ -34,18 +34,18 @@ jobs:
     needs: [checkout]
     steps:
       - name: Check required files
-        run: ${{ env.SCRIPTS_FOLDER }}/check_files.sh
+        run: ${{ env.WORKSPACE_FOLDER }}/scripts/check_files.sh
 
   check-ci:
     runs-on: ubuntu-latest
     needs: [checkout]
     steps:
       - name: CI check
-        run: ${{ env.SCRIPTS_FOLDER }}/check_ci.sh rebase
+        run: ${{ env.WORKSPACE_FOLDER }}/scripts//check_ci.sh rebase
 
   check-header:
     runs-on: ubuntu-latest
     needs: [checkout]
     steps:
       - name: Header comments check
-        run: ${{ env.SCRIPTS_FOLDER }}/check_header.sh
+        run: ${{ env.WORKSPACE_FOLDER }}/scripts//check_header.sh
