--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
 
   check-files:
     runs-on: ubuntu-latest
-    needs: [checkout]
+    needs: [checkout, debug]
     steps:
       - name: Check required files
         run: ${{ env.WORKSPACE_FOLDER }}/scripts/check_files.sh
