--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,12 +23,6 @@ on:
     branches: [ "main" ]
 
 jobs:
-  debug:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Debug
-        run: ls -a
-
   checkout:
     runs-on: ubuntu-latest
     steps:
@@ -37,8 +31,11 @@ jobs:
 
   check-files:
     runs-on: ubuntu-latest
-    needs: [checkout, debug]
+    needs: [checkout]
     steps:
+      - name: Debug
+        run: ls -a
+        
       - name: Check required files
         run: ${{ env.WORKSPACE_FOLDER }}/scripts/check_files.sh
 
