--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
         run: cd ${{ github.workspace }}
 
       - name: Check required files
-        run: ${{ env.SCRIPTS_FOLDER }}/scripts/check_files.sh
+        run: ${{ env.SCRIPTS_FOLDER }}/check_files.sh
 
   check-ci:
     runs-on: ubuntu-latest
@@ -47,7 +47,7 @@ jobs:
         run: cd ${{ github.workspace }}
 
       - name: CI check
-        run: ${{ env.SCRIPTS_FOLDER }}/scripts//check_ci.sh rebase
+        run: ${{ env.SCRIPTS_FOLDER }}/check_ci.sh rebase
 
   check-header:
     runs-on: ubuntu-latest
@@ -55,6 +55,6 @@ jobs:
     steps:
       - name: Navigate to repository root
         run: cd ${{ github.workspace }}
-        
+
       - name: Header comments check
-        run: ${{ env.SCRIPTS_FOLDER }}/scripts//check_header.sh
+        run: ${{ env.SCRIPTS_FOLDER }}/check_header.sh
