--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ on:
 jobs:
   debug:
     runs-on: ubuntu-latest
+    needs: [checkout]
     steps:
       - name: Print environment variables
         run: | 
