--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,20 +10,6 @@ on:
     branches: [ "main" ]
 
 jobs:
-  debug:
-    runs-on: ubuntu-latest
-    needs: [checkout]
-    steps:
-      - name: Print environment variables
-        run: | 
-          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
-
-      - name: Print current branch
-        run: git rev-parse --abbrev-ref HEAD
-
-      - name: Print current branch
-        run: git rev-parse --abbrev-ref HEAD
-
   checkout:
     runs-on: ubuntu-latest
     steps:
@@ -35,10 +21,10 @@ jobs:
     needs: [checkout]
     steps:
       - name: Navigate to scripts folder
-        run: cd ${{ github.workspace }}/${{ env.SCRIPTS_FOLDER }}
+        run: cd ${{ github.workspace }}
 
       - name: Check required files
-        run: ./check_files.sh
+        run: ../scripts/check_files.sh
 
   check-ci:
     runs-on: ubuntu-latest
@@ -48,7 +34,7 @@ jobs:
         run: cd ${{ github.workspace }}/${{ env.SCRIPTS_FOLDER }}
 
       - name: CI check
-        run: ./check_ci.sh rebase
+        run: ../scripts/check_ci.sh rebase
 
   check-header:
     runs-on: ubuntu-latest
@@ -58,4 +44,4 @@ jobs:
         run: cd ${{ github.workspace }}/${{ env.SCRIPTS_FOLDER }}
 
       - name: Header comments check
-        run: ./check_header.sh
+        run: ../scripts/check_header.sh
