--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,16 +19,20 @@ jobs:
   check-files:
     runs-on: ubuntu-latest
     needs: [checkout]
-    steps:
+    container:
+      image: custom-github-action
+    steps:    
       - name: Navigate to scripts folder
-        run: cd ${{ github.workspace }}
-
+        run: cd ${{ github.workspace }}/${{ env.SCRIPTS_FOLDER }}
+    
       - name: Check required files
-        run: ../scripts/check_files.sh
+        run: ./check_files.sh
 
   check-ci:
     runs-on: ubuntu-latest
     needs: [checkout]
+    container:
+      image: custom-github-action
     steps:
       - name: Navigate to scripts folder
         run: cd ${{ github.workspace }}/${{ env.SCRIPTS_FOLDER }}
@@ -39,6 +43,8 @@ jobs:
   check-header:
     runs-on: ubuntu-latest
     needs: [checkout]
+    container:
+      image: custom-github-action
     steps:
       - name: Navigate to scripts folder
         run: cd ${{ github.workspace }}/${{ env.SCRIPTS_FOLDER }}
