--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,11 @@ env:
 
 on:
   push:
-    branches: [ "main" ]
+    branches: 
+      - main
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   checkout:
@@ -18,36 +20,42 @@ jobs:
 
   check-files:
     runs-on: ubuntu-latest
-    needs: [checkout]
+    needs: checkout
     container:
       image: custom-github-action
-    steps:    
-      - name: Navigate to scripts folder
-        run: cd ${{ github.workspace }}/${{ env.SCRIPTS_FOLDER }}
-    
+    steps:        
       - name: Check required files
-        run: ./check_files.sh
+        run: |
+          cd ${{ env.SCRIPTS_FOLDER }}
+          chmod +x check_files.sh
+          ./check_files.sh
+        env:
+          SCRIPTS_FOLDER: ${{ env.SCRIPTS_FOLDER }}
 
   check-ci:
     runs-on: ubuntu-latest
-    needs: [checkout]
+    needs: checkout
     container:
       image: custom-github-action
     steps:
-      - name: Navigate to scripts folder
-        run: cd ${{ github.workspace }}/${{ env.SCRIPTS_FOLDER }}
-
       - name: CI check
-        run: ../scripts/check_ci.sh rebase
+        run: |
+          cd ${{ env.SCRIPTS_FOLDER }}
+          chmod +x check_ci.sh
+          ./check_ci.sh rebase
+        env:
+          SCRIPTS_FOLDER: ${{ env.SCRIPTS_FOLDER }}
 
   check-header:
     runs-on: ubuntu-latest
-    needs: [checkout]
+    needs: checkout
     container:
       image: custom-github-action
     steps:
-      - name: Navigate to scripts folder
-        run: cd ${{ github.workspace }}/${{ env.SCRIPTS_FOLDER }}
-
       - name: Header comments check
-        run: ../scripts/check_header.sh
+        run: |
+          cd ${{ env.SCRIPTS_FOLDER }}
+          chmod +x check_header.sh
+          ./check_header.sh
+        env:
+          SCRIPTS_FOLDER: ${{ env.SCRIPTS_FOLDER }}
