--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,8 @@ name: CI
 
 env:
   SCRIPTS_FOLDER: scripts
+  DOCKER_IMAGE_NAME: custom-github-action
+  DOCKER_IMAGE_TAG: latest
 
 on:
   push:
@@ -12,6 +14,17 @@ on:
       - main
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Build Docker image
+        run: |
+          docker build -t ${{ env.DOCKER_IMAGE_NAME }}:${{ env.DOCKER_IMAGE_TAG }} .
+        working-directory: ${{ env.SCRIPTS_FOLDER }}
+    
   checkout:
     runs-on: ubuntu-latest
     steps:
@@ -20,7 +33,7 @@ jobs:
 
   check-files:
     runs-on: ubuntu-latest
-    needs: checkout
+    needs: [checkout, build]
     container:
       image: custom-github-action
     steps:        
@@ -34,7 +47,7 @@ jobs:
 
   check-ci:
     runs-on: ubuntu-latest
-    needs: checkout
+    needs: [checkout, build]
     container:
       image: custom-github-action
     steps:
@@ -48,7 +61,7 @@ jobs:
 
   check-header:
     runs-on: ubuntu-latest
-    needs: checkout
+    needs: [checkout, build]
     container:
       image: custom-github-action
     steps:
