--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: CI
 
 env:
-  SCRIPTS_FOLDER: scripts/
+  SCRIPTS_FOLDER: scripts
   DOCKER_IMAGE_NAME: custom-github-action
   DOCKER_IMAGE_TAG: latest
 
@@ -14,28 +14,28 @@ on:
       - main
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Authenticate with Docker
-        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-
-      - name: Build Docker image
-        run: |
-          docker build -t ${{ env.DOCKER_IMAGE_NAME }}:${{ env.DOCKER_IMAGE_TAG }} .
-        working-directory: docker/
-    
   checkout:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Build Docker image
+        run: |
+          docker build -t ${{ env.DOCKER_IMAGE_NAME }}:${{ env.DOCKER_IMAGE_TAG }} .
+        working-directory: ${{ env.SCRIPTS_FOLDER }}
+
   check-files:
     runs-on: ubuntu-latest
     needs: [checkout, build]
     container:
-      image: custom-github-action
+      image: custom-github-action:latest
     steps:        
       - name: Check required files
         run: |
@@ -49,7 +49,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [checkout, build]
     container:
-      image: custom-github-action
+      image: custom-github-action:latest
     steps:
       - name: CI check
         run: |
@@ -63,7 +63,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [checkout, build]
     container:
-      image: custom-github-action
+      image: custom-github-action:latest
     steps:
       - name: Header comments check
         run: |
