--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build Docker image
         run: |
           docker build -t ${{ env.DOCKER_IMAGE_NAME }}:${{ env.DOCKER_IMAGE_TAG }} .
-        working-directory: ${{ env.SCRIPTS_FOLDER }}
+        working-directory: docker/
 
   check-files:
     runs-on: ubuntu-latest
